2011-02-23  Roland McGrath  <roland@redhat.com>

	* c++/dwarf-knowledge.cc (expected_value_space):
	Grok DW_AT_GNU_odr_signature.

2010-12-07  Petr Machata  <pmachata@redhat.com>

	* c++/subr.hh (sharing_stack::element::pop): Remove.  Move the
	logic to sharing_stack::pop.
	* c++/dwarf (debug_info_entry::children_type::const_iterator): Use
	sharing_stack instead of stackish.
	* c++/dwarf_tracker (dwarf_path_finder): Likewise.

2010-11-30  Roland McGrath  <roland@redhat.com>

	* c++/dwarf (dwarf::directory_table): Remove class.
	(dwarf::compile_unit::include_directories): Remove method.
	(dwarf::line_info_table::include_directories): Remove method.
	(dwarf::line_info_table::operator==): Don't use it.
	* c++/dwarf_data (dwarf_data::directory_table): Remove class.
	(dwarf_data::compile_unit::include_directories): Remove method.
	(dwarf_data::line_info_table::include_directories): Remove method.
	(dwarf_data::line_info_table::hasher): Replace.
	(dwarf_data::line_info_table::operator==): Don't use it.
	* c++/dwarf_output (dwarf_output::directory_table): Remove class.
	* c++/values.cc (line_info_string): Ignore include_directories.
	(dwarf::directory_table): Remove methods.
	* c++/line_info.cc (dwarf::directory_table): Remove methods.
	* c++/edit-values.cc (dwarf_data::line_table): Update instantiation.

2010-10-13  Roland McGrath  <roland@redhat.com>

	* dwarf.h: Add DW_LANG_Go.

2010-10-05  Roland McGrath  <roland@redhat.com>

	* dwarf_getaranges.c: Use malloc rather than alloca,
	since the total number of elements can be quite huge.

2010-10-11  Mark Wielaard  <mjw@redhat.com>

	* c++/subr.hh (string_hash_combine): Removed.
	(hash<std::string>): Extend std::tr1::hash<std::string>.
	* c++/dwarf_data (value_string): typedef std::tr1::hash<std::string>
	hasher.

2010-07-26  Roland McGrath  <roland@redhat.com>

	* dwarf_getlocation_implicit_pointer.c: New file.
	* Makefile.am (libdw_a_SOURCES): Add it.
	* libdw.map (ELFUTILS_0.149): New set.