@@ -1,3 +1,7 @@
+2011-02-24  Roland McGrath  <roland@redhat.com>
+
+	* libdwP.h: Make declarations C++-compatible using __BEGIN_DECLS.
+
 2011-02-23  Roland McGrath  <roland@redhat.com>
 
 	* c++/dwarf-knowledge.cc (expected_value_space):
